# local-llm-toolbox

./: .gitignore  README.md  SETUP.md  config.env.example  dev  flake.nix  pyproject.toml  toolbox
dashboard/: __init__.py  __main__.py  app.py  config.py
dashboard/static/: app.js  index.html  style.css
foundry/: README.md
llama-cpp/: README.md  config.toml  dev  download-models.sh  flake.nix  start
manager/: __init__.py  base.py  bridge.py  config.py  control.py  interface.py  process.py  registry.py  state.py  tasks.py
manager/backends/: __init__.py  foundry.py  llama.py  sglang.py  vllm.py
manager/rpc/: __init__.py  base.py  llama_rpc.py
router/: __init__.py  __main__.py  app.py  config.py
