[project]
name = "local-llm-toolbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=3.0.0",
    "foundry-local-sdk>=0.1.0; sys_platform == 'darwin' or sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manager", "dashboard"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "S", "C90"]
